first_app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guestbook-ui-svc
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: guestbook-ui
